--- a/crm/templates/shared/base.html
+++ b/crm/templates/shared/base.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/toast.js' %}"></script>
+
+    <script src="{% static 'js/main.js' %}"></script>
+
     <title>{% block title %}{% endblock title %}</title>
     {% tailwind_css %}
-
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
         {% block content %}{% endblock content %}
